# a11y-moda

./: .gitignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.en.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
docs/: AI_INTEGRATION.md  migration_115_11.md
examples/: README.md
examples/claude-code-skill/: README.md  SKILL.md
examples/cursor/: .cursorrules  README.md
examples/generic-agent/: AGENT.md
src/a11y_moda/: __init__.py  _security.py  _ssl.py  cli.py  crawler.py  css_utils.py  fetcher.py  llm.py  models.py  scanner.py
src/a11y_moda/_examples/: README.md
src/a11y_moda/_examples/aider/: .aider.conf.yml  README.md
src/a11y_moda/_examples/claude-code-skill/: README.md  REFERENCE.md  SKILL.md
src/a11y_moda/_examples/copilot/: README.md
src/a11y_moda/_examples/copilot/.github/: copilot-instructions.md
src/a11y_moda/lint/: __init__.py  base.py  helpers.py  parser.py  runner.py
src/a11y_moda/lint/codes/aria/: AR2410300E.py  AR2410301E.py  AR2410302E.py  AR3130600E.py
src/a11y_moda/lint/codes/focus/: FA2141104E.py  FA2240701E.py
src/a11y_moda/lint/codes/forms/: GN1110111E.py  HM1130103C.py  HM1130103C_1.py  HM2130500E.py
src/a11y_moda/lint/codes/headings/: HM1130100C.py  HM3241000C.py
src/a11y_moda/lint/codes/images/: HM1110100C.py  HM1110101C.py  HM1110104C.py  HM1110105C.py  HM1110106C.py
src/a11y_moda/lint/codes/keyboard/: FA1250202E.py  GN1210100E.py  GN1210200E.py  GN1220200E.py  GN1250101E.py  GN1250201E.py  GN1320100E.py
src/a11y_moda/lint/codes/lang/: HM1130200C.py  HM2310200C.py
src/a11y_moda/lint/codes/links/: HM1240400C.py  HM1240401C.py  HM3240900C.py
src/a11y_moda/lint/codes/media/: GN1140200E.py  GN3120600.py
src/a11y_moda/lint/codes/meta/: HM1240200C.py  HM1310100C.py  HM1410201C.py
src/a11y_moda/lint/codes/misc/: GN1320202E.py
src/a11y_moda/lint/codes/navigation/: GN1240100E.py  GN1240101E.py  GN1240102E.py  GN1240103E.py  GN1240104E.py  HM1240102C.py  HM3240800E.py
src/a11y_moda/lint/codes/presentation/: CS1110113E.py  CS1110114E.py  CS1130103E.py  CS1130202E.py  GN1130201E.py
src/a11y_moda/lint/codes/responsive/: CS2140500E.py  GN2140400E.py
src/a11y_moda/lint/codes/structure/: HM1130105E.py
src/a11y_moda/lint/codes/tables/: HM1130101C.py
src/a11y_moda/report/: __init__.py  _aggregate.py  _common.py  _html.py  _markdown.py
src/a11y_moda/rules/: __init__.py  base.py  helpers.py
src/a11y_moda/rules/_lib/: __init__.py  contrast_focus.py  css.py  extension_keyboard.py  extension_misc.py  extension_navigation.py  extension_responsive.py  forms.py  img_alt.py  llm_common.py  llm_forms.py  llm_headings.py  llm_images.py  llm_links.py  llm_structure.py  nav_links.py  origin.py  structure.py  tab_pattern.py  vision_rules.py
src/a11y_moda/rules/codes/: __init__.py
src/a11y_moda/rules/codes/aria/: AR2410300E.py  AR2410301E.py  AR2410302E.py  AR3130600E.py  FA2410303E.py  GN1240300E.py  GN1410200E.py  __init__.py
src/a11y_moda/rules/codes/consistency/: GN1320200E.py  GN2320300E.py  GN2320400E.py  __init__.py
src/a11y_moda/rules/codes/contrast/: GN2140300E.py  GN3140600E.py  __init__.py
src/a11y_moda/rules/codes/css/: CS2140401C.py  CS3140801C.py  CS3140802C.py  __init__.py
src/a11y_moda/rules/codes/focus/: CS1140101E.py  CS2240700E.py  CS3241200E.py  CS3241301E.py  FA2141104E.py  FA2240701E.py  FA2241100E.py  GN1240301E.py  GN3241302E.py  __init__.py
src/a11y_moda/rules/codes/forms/: FA2330801E.py  GN1110111E.py  GN1330100E.py  GN1330101E.py  GN1330102E.py  GN1330200E.py  GN1330201E.py  GN1330202E.py  GN1330203E.py  GN1330204E.py  GN1330205E.py  GN2240601E.py  GN2330300E.py  GN3330502E.py  GN3330602E.py  HM1130103C.py  HM1130103C_1.py  HM1130104C.py  HM1130105C.py  HM2130500E.py  HM2330800E.py  HM3330500C.py  __init__.py
src/a11y_moda/rules/codes/headings/: GN2240600E.py  HM1130100C.py  HM1130104E.py  HM3241000C.py  __init__.py
src/a11y_moda/rules/codes/images/: HM1110100C.py  HM1110100E.py  HM1110101C.py  HM1110101E.py  HM1110102E.py  HM1110103E.py  HM1110104C.py  HM1110104E.py  HM1110105C.py  HM1110105E.py  HM1110106C.py  HM1110106E.py  HM1110108E.py  HM1110112E.py  __init__.py
src/a11y_moda/rules/codes/keyboard/: FA1210102E.py  FA1250202E.py  GN1210100E.py  GN1210101E.py  GN1210200E.py  GN1220200E.py  GN1250101E.py  GN1250201E.py  GN1320100E.py  __init__.py
src/a11y_moda/rules/codes/lang/: HM1130200C.py  HM2310200C.py  __init__.py
src/a11y_moda/rules/codes/links/: GN1240401E.py  HM1240400C.py  HM1240400E.py  HM1240401C.py  HM1240402E.py  HM1240403E.py  HM1240404E.py  HM3240900C.py  __init__.py
src/a11y_moda/rules/codes/media/: GN1140200E.py  GN3120600.py  ME1320200C.py  __init__.py
src/a11y_moda/rules/codes/meta/: FA1220102E.py  HM1240200C.py  HM1240200E.py  HM1310100C.py  __init__.py
src/a11y_moda/rules/codes/misc/: GN1320202E.py  __init__.py
src/a11y_moda/rules/codes/moda_tw/: H309204.py  MT309203.py  __init__.py
src/a11y_moda/rules/codes/navigation/: GN1240100E.py  GN1240101E.py  GN1240102E.py  GN1240103E.py  GN1240104E.py  HM1240102C.py  HM3240800E.py  __init__.py
src/a11y_moda/rules/codes/presentation/: CS1110113E.py  CS1110114E.py  CS1130103E.py  CS1130202E.py  GN1130201E.py  __init__.py
src/a11y_moda/rules/codes/responsive/: CS2140500E.py  CS2141000E.py  CS2141001E.py  CS2141002E.py  CS2141003E.py  CS2141005E.py  CS2141006E.py  CS2141007E.py  CS2141200E.py  CS2141201E.py  CS2141202E.py  CS2141203E.py  CS2141204E.py  CS2250800E.py  FA2130401E.py  FA2130402E.py  GN2140400E.py  GN2140401E.py  GN2141009E.py  GN2141100E.py  GN2141101E.py  GN2141102E.py  GN2141103E.py  SC2141004E.py  __init__.py
src/a11y_moda/rules/codes/semantic/: HM1410200C.py  HM1410201C.py  __init__.py
src/a11y_moda/tools/: _session.py  carousel_probe.py  contrast.py  dialog_probe.py  form_probe.py  reflow_probe.py  tab_walk.py
tests/: README.md  conftest.py  regen_snapshots.py  test_lint_golden.py  test_smoke.py
tests/fixtures/: page.expected.json  page.html  violations.expected.json  violations.tsx
(+21 files in other folders)
