[project]
name = "a11y-moda"
version = "0.1.0"
description = "Taiwan MODA accessibility (WCAG A/AA/AAA) scanner — CLI complement to Freego, LLM-assisted for human-judgement rules."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "睞特股份有限公司", email = "r910103n@gmail.com" },
]
keywords = ["accessibility", "wcag", "a11y", "moda", "taiwan", "freego", "audit", "scanner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "click>=8.1",
    "playwright>=1.45",
    "wcag-contrast-ratio>=0.9",
    "tinycss2>=1.3",
]

[project.urls]
Homepage = "https://github.com/r910103n/a11y-moda"
Repository = "https://github.com/r910103n/a11y-moda"
Issues = "https://github.com/r910103n/a11y-moda/issues"

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
report = ["jinja2>=3.1", "markdown>=3.6"]

[project.scripts]
a11y-moda = "a11y_moda.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
