[project]
name = "a11y-moda"
version = "0.1.0"
description = "Taiwan MODA accessibility CLI · WCAG A/AA/AAA · zh-TW · Freego complement"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "睞特股份有限公司", email = "maple@light-design.com.tw" },
]
keywords = ["accessibility", "wcag", "a11y", "moda", "taiwan", "freego", "audit", "scanner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: Chinese (Traditional)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=6.1,<7.0",            # CVE-2026-41066 (XXE) fixed in 6.1
    "click>=8.1,<9.0",
    "playwright>=1.59,<2.0",     # CVE-2026-2441 Chromium use-after-free patched in 1.59
    "wcag-contrast-ratio>=0.9,<1.0",
    "tinycss2>=1.3,<2.0",
    "defusedxml>=0.7,<1.0",
    "python-dotenv>=1.2.2,<2.0", # CVE-2026-28684 symlink in set_key/unset_key
]

[project.urls]
Homepage = "https://github.com/light-design-tw/a11y-moda"
Repository = "https://github.com/light-design-tw/a11y-moda"
Issues = "https://github.com/light-design-tw/a11y-moda/issues"

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
report = ["jinja2>=3.1", "markdown>=3.6"]

[project.scripts]
a11y-moda = "a11y_moda.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
