[project]
name = "a11y-moda"
version = "0.3.3"
description = "Taiwan MODA accessibility CLI · WCAG A/AA/AAA · zh-TW · Freego complement"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "睞特股份有限公司", email = "maple@light-design.com.tw" },
]
keywords = ["accessibility", "wcag", "a11y", "moda", "taiwan", "freego", "audit", "scanner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Natural Language :: Chinese (Traditional)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=6.1,<7.0",            # CVE-2026-41066 (XXE) fixed in 6.1
    "click>=8.1,<9.0",
    "wcag-contrast-ratio>=0.9,<1.0",
    "tinycss2>=1.3,<2.0",
    "defusedxml>=0.7,<1.0",
    "python-dotenv>=1.2.2,<2.0", # CVE-2026-28684 symlink in set_key/unset_key
    "tree-sitter>=0.23,<0.26",
    "tree-sitter-typescript>=0.23,<0.24",
    "tree-sitter-html>=0.23,<0.24",
    "pathspec>=0.12,<1.0",
]

[project.optional-dependencies]
# Browser-based scan / site command + --render flag. Lint command does
# not need this — pure tree-sitter AST. ~290MB extra (playwright pkg +
# Chromium binary). Install with: pip install 'a11y-moda[scan]'
scan = [
    "playwright>=1.59,<2.0",     # CVE-2026-2441 Chromium use-after-free patched in 1.59
]
all = [
    "playwright>=1.59,<2.0",
]
# Test runner + helpers. Not needed at runtime; only for `pytest tests/`
# during development or in release.yml CI. Install with:
#   pip install 'a11y-moda[dev]'
dev = [
    "pytest>=8,<10",
]

[project.urls]
Homepage = "https://github.com/light-design-tw/a11y-moda"
Repository = "https://github.com/light-design-tw/a11y-moda"
Issues = "https://github.com/light-design-tw/a11y-moda/issues"
Documentation = "https://github.com/light-design-tw/a11y-moda#readme"
Changelog = "https://github.com/light-design-tw/a11y-moda/blob/main/CHANGELOG.md"

[project.scripts]
a11y-moda = "a11y_moda.cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.setuptools.package-data]
# Bundle IDE / agent integration templates so `a11y-moda init <ide>`
# can copy them into the user's repo / config dir without requiring
# them to clone the GitHub repo. Explicit paths needed because dotfiles
# (.cursorrules) and dotdirs (.github/) are skipped by glob defaults.
a11y_moda = [
    "_examples/**/*.md",
    "_examples/**/*.yml",
    "_examples/aider/.aider.conf.yml",
    "_examples/cursor/.cursorrules",
    "_examples/copilot/.github/copilot-instructions.md",
]
